--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
 	"express" : "2.5.x",
 	"socket.io" : "0.9.x",
-	"twilio" : "0.4.0"
+	"twilio" : "0.4.0",
+	"passport" : "0.1.x",
+	"passport-local" : "0.1.x",
+	"mysql" : "0.9.2",
+	"node-uuid" : "1.3.x",
+	"sha1" : "0.0.x"
   }
 }
