--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
 	"express" : "2.5.x",
 	"socket.io" : "0.9.x",
 	"twilio" : "0.4.0",
-	"passport" : "0.1.x",
-	"passport-local" : "0.1.x",
-	"mysql" : "0.9.2",
+  "mysql-simple" : "1.0.x",
 	"node-uuid" : "1.3.x",
-	"sha1" : "0.0.x"
+	"sha1" : "0.0.x",
+  "connect" : "2.4.5"
   }
 }
